--- a/index.html
+++ b/index.html
@@ -116,5 +116,19 @@
 			</div>
 		</div>
 	</section>
+
+	<script>
+		
+		const mobBtn = document.getElementById('mobile-cta');
+		const nav = document.querySelector('nav');
+		const mobBtnExit = document.getElementById('mobile-exit');
+
+		mobBtn.addEventListener('click',() =>{
+			nav.classList.add('menu-btn');
+		})
+		mobBtnExit.addEventListener('click',() =>{
+			nav.classList.remove('menu-btn');
+		})
+	</script>
 </body>
 </html>
