tablet design added

--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
 		<div class="container">
 			<ul>
 				<li>
-					<img src="images/person.jpg" alt="person">
+					<img src="images/person2.jpeg" alt="person">
 					<blockquote>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel elit vel massa luctus fermentum quis luctus justo. Fusce tellus ipsum, dignissim et tempor"</blockquote>
 					<cite class="nam-contain">- Anosh Khan</cite>
 				</li>
 				<li>
-					<img src="images/person2.jpg" alt="person">
+					<img src="images/person2.jpeg" alt="person">
 					<blockquote>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel elit vel massa luctus fermentum quis luctus justo. Fusce tellus ipsum, dignissim et tempor"</blockquote>
 					<cite>- Anosh Khan</cite>
 				</li>
 
 				<li>
-					<img src="images/person.jpg" alt="person">
+					<img src="images/person2.jpeg" alt="person">
 					<blockquote>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel elit vel massa luctus fermentum quis luctus justo. Fusce tellus ipsum, dignissim et tempor"</blockquote>
 					<cite>- Anosh Khan</cite>
 				</li>
