desktop respoonsive hero page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<ul class="secondary-nav">
 					
-					<li><a href="#">Contact</a></li>
+					<li><a href="#contac">Contact</a></li>
 					<li class="go-premium-cta"><a href="#">Go Premium</a></li>
 					
 				</ul>
@@ -38,10 +38,10 @@
 			<div class="left-col">
 				<p class="sub-heading">
 
-					It's nitty & gritty
+					It's make task easy 
 				</p>
 				<h1>
-					A task App That Doesn't Stink
+					A app for all your documentation
 				</h1>
 				<div class="hero-cta">
 					<a href="#" class="primary-cta">Try for free</a>
@@ -97,7 +97,7 @@
 		</div>
 	</section>
 
-	<section class="contact-section">
+	<section class="contact-section" id="contact">
 		<div class="container">
 			<div class="contact-left">
 				<h2>Contact</h2>
