--- a/index.html
+++ b/index.html
@@ -117,18 +117,9 @@
 		</div>
 	</section>
 
-	<script>
+	<script src="main.js">
 		
-		const mobBtn = document.getElementById('mobile-cta');
-		const nav = document.querySelector('nav');
-		const mobBtnExit = document.getElementById('mobile-exit');
-
-		mobBtn.addEventListener('click',() =>{
-			nav.classList.add('menu-btn');
-		})
-		mobBtnExit.addEventListener('click',() =>{
-			nav.classList.remove('menu-btn');
-		})
+		
 	</script>
 </body>
 </html>
